--- a/config/config.env
+++ b/config/config.env
@@ -7,5 +7,5 @@ RAZORPAY_API_KEY="rzp_test_OwU0suJOhypfwL"
 RAZORPAY_API_SECRET="BZwj2rcAAliHoF2K7u5sohJp"
 REACT_APP_LOCALHOST_KEY="geekstacks-user"
 
-# HOST_URL = "https://geekstack-backend.onrender.com"
-HOST_URL = "http://localhost:5000"
+HOST_URL = "https://geekstack-backend.onrender.com"
+# HOST_URL = "http://localhost:5000"
